# MatchAudit

./: .gitignore  CHANGELOG.md  LICENSE  README.md  matchaudit.py  pyproject.toml
.github/workflows/: ci.yml
openspec/: config.yaml
openspec/changes/archive/2026-07-12-definir-stack-tecnologico-y-setup-inicial/: exploration.md  proposal.md  tasks.md
openspec/changes/archive/2026-07-12-implementar-comparador-de-dataframes-y-lectores/: archive-report.md  exploration.md  proposal.md  verify-report.md
openspec/changes/archive/2026-07-12-implementar-lector-de-capturas-ocr/: archive-report.md  design.md  exploration.md  proposal.md  tasks.md  verify-report.md
openspec/changes/archive/2026-07-12-implementar-lector-de-capturas-ocr/specs/readers/: spec.md
openspec/changes/implementar-comparador-de-dataframes-y-lectores/: tasks.md
scripts/: MatchAudit.spec  build.bat  build.sh
src/matchaudit/: __init__.py  __main__.py  cli.py  gui.py
src/matchaudit/core/: __init__.py  comparator.py  control_point.py  models.py
src/matchaudit/output/: __init__.py  console.py
src/matchaudit/readers/: __init__.py  csv.py  excel.py  ocr.py
tests/: conftest.py  test_cli.py  test_comparator.py  test_ocr_reader.py  test_output.py  test_readers.py
tests/fixtures/: gen_capture_fixture.py  misaligned.csv  sample.csv  sample.xlsx
