[project]
name = "matchaudit"
version = "0.1.0"
description = "Data validation and reconciliation tool for audit teams"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
    { name = "MatchAudit Contributors" },
]
keywords = ["audit", "reconciliation", "data-validation", "cli"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Financial and Insurance Industry",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Office/Business :: Financial :: Spreadsheet",
]

dependencies = [
    "click>=8.1",
    "pandas>=2.1",
    "openpyxl>=3.1",
    "sqlalchemy>=2.0",
    "rich>=13.7",
]

[dependency-groups]
dev = [
    "pytest>=7",
    "ruff>=0.5",
]

[project.optional-dependencies]
ocr = ["easyocr", "pillow"]

[project.scripts]
matchaudit = "matchaudit.cli:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.ruff.format]
quote-style = "double"

[tool.pytest.ini_options]
minversion = "7.0"
testpaths = ["tests"]
pythonpath = ["src"]
